Add search by oem id
Handle 404 from director
